Bug 142721 - impossible set single cell border inside a table
Summary: impossible set single cell border inside a table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.5
Keywords: bibisected, bisected, regression
: 142850 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-08 20:40 UTC by Gabriele Bertolucci
Modified: 2021-06-21 08:46 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Bertolucci 2021-06-08 20:40:43 UTC
Open Writer.
Insert a table (e.g. 4x4).
Select a single cell.
Right clic on the selection -> "Table properties".
Set a border (no matter which side or all sides).
Clic "Ok".
Border formatting is applied to the whole table instead of the selected cell.
Comment 1 raal 2021-06-08 22:08:34 UTC
Confirm with Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: ec629c5ee22d02f99d66a5cf975ce239876b7f4d
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2021-06-08 22:16:09 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 0223c0ab534afa9cc29bcd6ee66f2f7f21d15e71 is the first bad commit
commit 0223c0ab534afa9cc29bcd6ee66f2f7f21d15e71
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Mar 12 17:35:36 2021 +0100

    source 6db71f70a3b200d4074f6cda8ce445e9861d3296

https://git.libreoffice.org/core/+/6db71f70a3b200d4074f6cda8ce445e9861d3296
  tdf#140977 drop possible table-cursor before setting the new one
Comment 3 Caolán McNamara 2021-06-09 15:33:15 UTC
This all stems as layered fixes on https://cgit.freedesktop.org/libreoffice/core/commit/?id=c3a085d22742f88e91ff92f319a26d6e8d1d9a98
Comment 4 Commit Notification 2021-06-09 18:30:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3bcb8c3d6d028f76817039f2aad57cab5a6e524b

tdf#142721 restore SwShellTableCursor if the orig selection was a single cell

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2021-06-09 18:47:21 UTC
backport of the latest effort available in gerrit for 7-1
Comment 6 Commit Notification 2021-06-11 08:50:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/b76d3943b09c129393d7aa763dbb3322218726db

tdf#142721 restore SwShellTableCursor if the orig selection was a single cell

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabriele Bertolucci 2021-06-12 08:35:36 UTC
I've tried following daily version

Version: 7.1.5.0.0+ / LibreOffice Community
Build ID: 8619e743564a241eb951866616aec82e1ab3965f
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: it-IT
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-1, Time: 2021-06-11_05:54:38
Calc: CL

but the problem is still present.
Perhaps the correction is not included yet?
Comment 8 Xisco Faulí 2021-06-15 14:23:10 UTC
*** Bug 142850 has been marked as a duplicate of this bug. ***
Comment 9 Timur 2021-06-16 08:07:21 UTC
(In reply to Gabriele Bertolucci from comment #7)
> I've tried following daily version
> Version: 7.1.5.0.0+ / LibreOffice Community
> Build ID: 8619e743564a241eb951866616aec82e1ab3965f

That one was 5 days old so it didn't contain the fix.
Comment 10 kubbugrep 2021-06-18 04:50:44 UTC
(In reply to Timur from comment #9)

The first version, that fixed it for me, is 7.2.0.0.beta1 (x64) from yesterday evening. I haven't tested every single daily build though.

The question is whether this will be fixed in the 7.1 branch or whether users will have to wait for the 7.2.0 release in mid/late August.
Comment 11 Timur 2021-06-18 06:57:59 UTC
You may see in Comment 6 that it will be in 7.1.5.
Comment 12 BogdanB 2021-06-19 12:01:51 UTC
Verified in latest master.
It's fixed.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 51754ca5349d7bf655d57ded37381188d0bc4bcf
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 13 kubbugrep 2021-06-21 06:10:06 UTC
(In reply to BogdanB from comment #12)

Hopefully users won't have to wait for 7.3, for which there isn't even an official release schedule yet. According to the 7.2.6 schedule, 7.3 release is to be expected in mid '22. That's about one year in the future!
Comment 14 BogdanB 2021-06-21 08:46:39 UTC
(In reply to kubbugrep from comment #13)
> (In reply to BogdanB from comment #12)
> 
> Hopefully users won't have to wait for 7.3, for which there isn't even an
> official release schedule yet. According to the 7.2.6 schedule, 7.3 release
> is to be expected in mid '22. That's about one year in the future!

Hi, as you can see, the targeted versions are 7.2.0 (will be released Week 33 , Aug 16, 2021 - Aug 22, 2021) and 7.1.5 (will be released Week 26 , Jun 28, 2021 - Jul 4, 2021), but I tested in 7.3 because I removed 7.2 master from my computer (space problem).